--- a/demo-config-client-dev.properties
+++ b/demo-config-client-dev.properties
@@ -1,10 +1,10 @@
 hello = hi,erverything is ok!But i am changed!20171027
 server.port=5555
-bootstrap.servers=10.66.0.48:9092
-enable.auto.commit=false
-auto.offset.reset=earliest
-key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-deserializer.encoding=utf-8
-zookeeper.session.timeout.ms=40000
-zookeeper.sync.time.ms=200
+saas.translation.bootstrap.servers=10.66.0.48:9092
+saas.translation.enable.auto.commit=false
+saas.translation.auto.offset.reset=earliest
+saas.translation.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+saas.translation.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+saas.translation.deserializer.encoding=utf-8
+saas.translation.zookeeper.session.timeout.ms=40000
+saas.translation.zookeeper.sync.time.ms=200
